feat: улучшение стабильности и поддержка модели Vikhr-Nemo
- Увеличен таймаут обработки до 1 часа (3600 секунд)
- Увеличено количество попыток повтора с 3 до 5
- Увеличен max_tokens с 4000 до 8000
- Добавлены индикаторы прогресса для всех этапов
- LM Studio используется по умолчанию
- Добавлена поддержка модели vikhr-nemo-12b-instruct-r-21-09-24
- Улучшены сообщения об ошибках с подсказками
- Добавлены файлы документации: CHANGELOG.md, PRIVACY_RU.md, VIKHR_MODEL_SETUP.md
- Обновлены конфигурационные файлы и руководства

--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,65 @@
 # =============================================================================
-# Конфигурация Meminto для локального сервера с Ollama
+# Конфигурация Meminto - ТОЛЬКО ЛОКАЛЬНЫЕ МОДЕЛИ
+# ВСЕ ДАННЫЕ ОБРАБАТЫВАЮТСЯ ЛОКАЛЬНО, БЕЗ ПЕРЕДАЧИ НА ВНЕШНИЕ СЕРВИСЫ
 # =============================================================================
 
 # -----------------------------------------------------------------------------
 # Hugging Face Access Token (обязательно)
-# Необходим для загрузки моделей диаризации (разделения по спикерам)
+# Необходим ТОЛЬКО для загрузки моделей диаризации (разделения по спикерам)
+# Модели загружаются ОДИН РАЗ и затем работают локально
 # Как получить токен:
 # 1. Зарегистрируйтесь на https://huggingface.co/
 # 2. Перейдите на https://huggingface.co/pyannote/speaker-diarization
 # 3. Примите условия использования
 # 4. Получите токен на https://huggingface.co/settings/tokens
+# ВАЖНО: Токен используется только для загрузки моделей, данные не передаются!
 # -----------------------------------------------------------------------------
 HUGGING_FACE_ACCESS_TOKEN=your_hugging_face_token_here
 
 # -----------------------------------------------------------------------------
-# Настройки Ollama (для локальной LLM)
-# Используйте эти настройки, если запускаете программу с флагом --use-ollama
+# Настройки LM Studio (для локальной LLM) - ПО УМОЛЧАНИЮ
+# Все данные обрабатываются на вашем компьютере
+# -----------------------------------------------------------------------------
+# Модель LM Studio для генерации протоколов
+# Рекомендуемые модели для русского языка:
+# - vikhr-nemo-12b-instruct-r-21-09-24 (отлично для русского языка, 12B параметров)
+# - Qwen/Qwen2.5-7B-Instruct (отличная поддержка русского языка)
+# - Llama-3.1-8B-Instruct (хорошая производительность)
+# - mistralai/Mistral-7B-Instruct-v0.2 (универсальная модель)
+LMSTUDIO_MODEL=vikhr-nemo-12b-instruct-r-21-09-24
+
+# URL LM Studio API (ЛОКАЛЬНЫЙ сервер, стандартный порт 1234)
+LMSTUDIO_URL=http://localhost:1234/v1/chat/completions
+
+# Максимальное количество токенов для генерации
+# Для совещаний длительностью 1-2 часа рекомендуется 8000
+LMSTUDIO_MAX_TOKENS=8000
+
+# -----------------------------------------------------------------------------
+# Настройки Ollama (альтернатива LM Studio)
+# Все данные также обрабатываются локально
 # -----------------------------------------------------------------------------
 # Модель Ollama для генерации протоколов
 # Рекомендуемые модели для русского языка:
-# - llama3.2 (быстрая, хорошо работает с русским)
 # - qwen2.5:7b (отличная поддержка русского языка)
+# - llama3.2 (быстрая, хорошо работает с русским)
 # - mistral (хорошая альтернатива)
-# - gemma2:9b (хорошая производительность)
 OLLAMA_MODEL=qwen2.5:7b
 
-# URL Ollama API (обычно локальный сервер)
-OLLAMA_URL=http://localhost:11434/api/chat
+# URL Ollama API (ЛОКАЛЬНЫЙ сервер)
+OLLAMA_URL=http://localhost:11434/api/generate
 
 # Максимальное количество токенов для генерации
-# Для совещаний длительностью 1-2 часа рекомендуется 4000-8000
 OLLAMA_MAX_TOKENS=8000
+
+# =============================================================================
+# ГАРАНТИЯ КОНФИДЕНЦИАЛЬНОСТИ:
+# - Все аудио обрабатывается локально (Whisper)
+# - Диаризация выполняется локально (pyannote.audio)
+# - Генерация протокола выполняется локально (LM Studio или Ollama)
+# - НИКАКИЕ данные не передаются на сторонние серверы
+# - Hugging Face токен используется ТОЛЬКО для загрузки моделей
+# =============================================================================
 
 # -----------------------------------------------------------------------------
 # Настройки удаленного транскрайбера (опционально)
