--- a/env.example
+++ b/env.example
@@ -1,5 +1,38 @@
-HUGGING_FACE_ACCESS_TOKEN=<your_access_token> #see TL;DR of https://huggingface.co/pyannote/speaker-diarization
-LLM_URL=<your_llm_url> #e.g. "https://api.openai.com/v1/chat/completions" for openAI
-LLM_MODEL=<your_llm_model> #e.g. "gpt-3.5-turbo"
-LLM_MAX_TOKENS=<yor_llm_max_tokens> #e.g. "4000"
-LLM_AUTHORIZATION=<your_llm_authorization> #e.g. "Bearer <Your OpenAI API key>"
+# ========================================
+# ТОЛЬКО ЛОКАЛЬНЫЕ МОДЕЛИ
+# ВСЕ ДАННЫЕ ОБРАБАТЫВАЮТСЯ ЛОКАЛЬНО
+# ========================================
+
+# Hugging Face Token (используется ТОЛЬКО для загрузки моделей)
+# Получить: https://huggingface.co/pyannote/speaker-diarization
+HUGGING_FACE_ACCESS_TOKEN=<your_access_token>
+
+# ========================================
+# LM Studio Configuration (по умолчанию)
+# ========================================
+# LM Studio используется ПО УМОЛЧАНИЮ
+LMSTUDIO_MODEL=qwen2.5-7b-instruct
+LMSTUDIO_URL=http://localhost:1234/v1/chat/completions
+LMSTUDIO_MAX_TOKENS=8000
+# Таймаут: 1 час (3600 секунд) для длительной обработки
+
+# ========================================
+# Ollama Configuration (альтернатива)
+# ========================================
+# Для использования Ollama запустите:
+# python meminto/main.py --no-use-lmstudio
+OLLAMA_MODEL=qwen2.5:7b
+OLLAMA_URL=http://localhost:11434/api/generate
+OLLAMA_MAX_TOKENS=8000
+# Таймаут: 1 час (3600 секунд) для длительной обработки
+
+# ========================================
+# ГАРАНТИЯ КОНФИДЕНЦИАЛЬНОСТИ:
+# ========================================
+# ✅ Все аудио обрабатывается локально (Whisper)
+# ✅ Диаризация выполняется локально (pyannote.audio)
+# ✅ Генерация протокола выполняется локально (LM Studio или Ollama)
+# ✅ НИКАКИЕ данные не передаются на сторонние серверы
+# ✅ Hugging Face токен используется ТОЛЬКО для загрузки моделей
+# ✅ Лимит обработки: 1 час на каждый этап
+# ✅ Автоматические повторы при временных сбоях (5 попыток)
