feat: добавлен флаг OFFLINE_MODE для управления загрузкой моделей
- OFFLINE_MODE=false (по умолчанию) - разрешена загрузка моделей из интернета
- OFFLINE_MODE=true - использовать только локальный кэш
- Добавлены сообщения о текущем режиме работы

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,14 @@
 HUGGING_FACE_ACCESS_TOKEN=your_hugging_face_token_here
 
 # -----------------------------------------------------------------------------
+# Режим работы с моделями Hugging Face
+# -----------------------------------------------------------------------------
+# OFFLINE_MODE=true  - использовать только локальный кэш (без интернета)
+# OFFLINE_MODE=false - разрешить загрузку моделей из интернета (по умолчанию)
+# Если модели уже скачаны, установите true для более быстрого запуска
+OFFLINE_MODE=false
+
+# -----------------------------------------------------------------------------
 # Настройки LM Studio (для локальной LLM) - ПО УМОЛЧАНИЮ
 # Все данные обрабатываются на вашем компьютере
 # -----------------------------------------------------------------------------
